--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core libraries
-streamlit==1.31.0
-pandas==2.2.0
-numpy==1.26.3
+streamlit>=1.31.0
+pandas>=2.0.0
+numpy>=1.24.0
 
 # Data visualization
-matplotlib==3.8.2
-seaborn==0.13.1
-plotly==5.18.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.18.0
